test/fixtures/type-error/bad-assignment.ro
type i32
type f32

fun test() = {
  var test = 1
  test = 123.0
  test
}